--- a/about/index.html
+++ b/about/index.html
@@ -128,7 +128,7 @@ body.custom-background { background-color: #ffffff; }
 
 <div align=center>
 <small>
-&copy; 2017 Creative LifeWays<br/>
+&copy; 2018 LifeWays Health<br/>
 <em>All material on this website is provided for informational and educational purposes only and is not intended as a substitute for the advice provided by your physician or other healthcare professional.<br/>
 The information on this website is not to be used for diagnosing or treating a health problem or disease or prescribing any medication or other treatment.</em><br/>
 <br/>
